docker-kubernetes-security-practice-guide-1.0.0/chapter6/6.1/deny-metadata-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-egress-metadata
  namespace: default
spec:
  podSelector: {}
  ingress:
  - {}
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 169.254.169.254/32
