docker-kubernetes-security-practice-guide-1.0.0/chapter6/6.1/example-match-label-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-policy
  namespace: default
spec:
  policyTypes:
  - Ingress
  - Egress
  # ポリシを適用するPodをselectorで指定
  podSelector:
    matchLabels:
      app: backend
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 8888
